--- a/src/app/layout/main-nav/main-nav.component.html
+++ b/src/app/layout/main-nav/main-nav.component.html
@@ -8,16 +8,17 @@
     <mat-nav-list>
         <a mat-list-item (click)="drawer.toggle()" [routerLink]="['/']" [routerLinkActive]="['active']">Hjem</a>
         <a mat-list-item (click)="drawer.toggle()" [routerLink]="['/oppdrag']" [routerLinkActive]="['active']">Oppdrag</a>
+        <a mat-list-item (click)="handleLogout()">Logg ut</a>
     </mat-nav-list>
   </mat-sidenav>
-  
+
   <mat-sidenav-content>
 
     <mat-toolbar color="primary" class="p-0" >
       <button
         class="nav_button"
         type="button"
-        aria-label="Toggle sidenav"  
+        aria-label="Toggle sidenav"
         mat-icon-button
         (click)="drawer.toggle()"
         *ngIf="isHandset$ | async">
@@ -27,7 +28,7 @@
       <span style="margin-right:auto">Bj Bygg & Eiendom</span>
 
       <router-outlet name="mainNavSearchBar"></router-outlet>
-      
+
     </mat-toolbar>
 
     <router-outlet name="mainNavContent"></router-outlet>
