--- a/src/app/containers/mission-details/mission-details.component.html
+++ b/src/app/containers/mission-details/mission-details.component.html
@@ -1,6 +1,8 @@
 <app-nested-nav
     *ngIf="mission"
     title="{{ mission.address }}"
+    editEnabled=true,
+    deleteEnabled=true,
     (deleteClicked)="deleteMission()"
     (editClicked)="editMission()"
     (backClicked)="onBack()"
