--- a/src/app/layout/bottom-nav/bottom-nav.component.html
+++ b/src/app/layout/bottom-nav/bottom-nav.component.html
@@ -1,23 +1,23 @@
 <mat-toolbar color="accent" class="bottom_toolbar p-0">
 
-        <button [routerLink]="['/']" [routerLinkActive]="['activeIcon']"
-            class="bottom_toolbar_button" mat-icon-button aria-label="Neste side">
+        <button [routerLink]="['/oppdrag']" [routerLinkActive]="['activeIcon']"
+          class="bottom_toolbar_button" mat-icon-button aria-label="Neste side">
 
-                <mat-icon class="bottom_toolbar_icon">home</mat-icon>
-
-        </button>
-
-        <button [routerLink]="['/oppdrag']" [routerLinkActive]="['activeIcon']" 
-            class="bottom_toolbar_button" mat-icon-button aria-label="Neste side">
-
-            <mat-icon class="bottom_toolbar_icon">view_list</mat-icon>
+          <mat-icon class="bottom_toolbar_icon">view_list</mat-icon>
 
         </button>
 
-        <button 
+        <button [routerLink]="['/oppdragsgivere']" [routerLinkActive]="['activeIcon']"
             class="bottom_toolbar_button" mat-icon-button aria-label="Neste side">
 
-            <mat-icon class="bottom_toolbar_icon">hourglass_full</mat-icon>
+            <mat-icon class="bottom_toolbar_icon">account_box</mat-icon>
+
+        </button>
+
+        <button [routerLink]="['/ansatte']" [routerLinkActive]="['activeIcon']"
+            class="bottom_toolbar_button" mat-icon-button aria-label="Neste side">
+
+            <mat-icon class="bottom_toolbar_icon">people</mat-icon>
 
         </button>
 
