--- a/src/app/containers/mission-note-details/mission-note-details.component.html
+++ b/src/app/containers/mission-note-details/mission-note-details.component.html
@@ -1,6 +1,8 @@
 <app-nested-nav *ngIf="note"
-    icon="edit" 
+    icon="edit"
     title="{{ this.note.title || (this.note.createdAt | date: 'short') }}"
+    editEnabled=true,
+    deleteEnabled=true,
     (deleteClicked)="deleteMissionNote()"
     (editClicked)="editMissionNote()"
     (backClicked)="onBack()"
@@ -11,7 +13,7 @@
     {{ this.note.content }}
     </div>
     <mat-divider></mat-divider>
-    <div class="row p-3">      
+    <div class="row p-3">
         {{ this.note.createdAt | date: 'short' }} av {{ this.note.createdBy || "Anonym" }}
     </div>
 </div>
